--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="utf-8">
     <title>Test Project</title>
-    <base href="/">
+    <base href="/aerostats/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Test Project">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
